# fireworks

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
docs/: agents.html  agents.md  api-reference.html  api-reference.md  auth.html  auth.md  build-html.mjs  callbacks.html  callbacks.md  chains.html  chains.md  checkpoints.html  checkpoints.md  cli.html  cli.md  concepts.html  concepts.md  document-loaders.html  document-loaders.md  evaluations.html  evaluations.md  getting-started.html  getting-started.md  governance.html  governance.md  index.html  integrations.html  integrations.md  llms.html  llms.md  mcp.html  mcp.md  memory.html  memory.md  monitoring.html  monitoring.md  output-parsers.html  output-parsers.md  plugins.html  plugins.md  (+16 more)
examples/: 01-basic-llm.ts  02-prompt-templates.ts  03-llm-chain.ts  04-router-chain.ts  05-agent-with-tools.ts  06-memory-chat.ts  07-rag-pipeline.ts  08-streaming.ts  09-retrieval-qa.ts  10-native-tools-and-structured.ts  11-tool-calling-agent.ts  12-tracing-and-evals.ts  13-checkpoints.ts  14-human-approval.ts  15-workflow-graph.ts  16-parallel-workflow.ts  17-governance-controls.ts  18-monitoring-dashboard.ts  19-plugins-and-connectors.ts  20-management-server.ts  21-simple-create-agent.ts  22-mcp-client-server.ts  README.md
python/: pyproject.toml
python/fireworks_plus_plus/: __init__.py  auth.py  client.py  monitoring.py
python/tests/: test_client.py
src/: cli.ts  index.ts
src/agents/: base.ts  executor.ts  index.ts  planner.ts  (+4 more)
test/: smoke.test.cjs
(+119 files in other folders)
