[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fireworks-plus-plus"
version = "0.1.0"
description = "Python management SDK for Fireworks++"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
